--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Alloy Component</title>
 </head>
-<body style="opacity: 0;font-size: 16px">
+<body style="opacity: 0">
     <div id="root"></div>
 </body>
 </html>
